feat: some improvement